--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,44 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Card from "../components/Card.astro";
 import Button from "../components/Button";
 const num = 1;
 const ppl = ["Bob", "Joe", "May"];
+const response = await fetch(
+	"https://jsonplaceholder.typicode.com/users?_limit=10"
+);
+const users = await response.json();
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
 		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<a class="link" href="/about">about page</a>
-		<h3>num : {num}</h3>
-		<p>person name:</p>
-		<ul>
-			{ppl.map((item) => <li>-{item}</li>)}
-		</ul>
-		<p>paragraph : <span id="paragraph"></span></p>
-		<p class="text-3xl">copyright:<span id="copyright"></span></p>
-		<span>click to add number :</span><Button client:load />
+		<section class="mb-5">
+			<h3 class="text-3xl">page link</h3>
+			<a class="link" href="/about">about page</a>
+		</section>
+		<section class="mb-5">
+			<h3 class="text-3xl">variables</h3>
+			<p>num : {num}</p>
+			<p>person name:</p>
+			<ul>
+				{ppl.map((item) => <li>-{item}</li>)}
+			</ul>
+		</section>
+		<section class="mb-5">
+			<h3 class="text-3xl">client-side JS</h3>
+			<p>paragraph : <span id="paragraph"></span></p>
+			<p>copyright:<span id="copyright"></span></p>
+		</section>
+		<section class="mb-5">
+			<h3 class="text-3xl">React component</h3>
+			<span>click to add number :</span><Button client:load />
+		</section>
+		<section class="mb-5">
+			<h3 class="text-3xl">fetch users data:</h3>
+			<ul>
+				{users.map((user) => <li>-{user.name}</li>)}
+			</ul>
+		</section>
 	</main>
 </Layout>
 
